--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.example</groupId>
     <artifactId>searchengine</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +15,6 @@
         <spring.datasource.username>${env.DB_USER}</spring.datasource.username>
         <spring.datasource.password>${env.DB_PASS}</spring.datasource.password>
     </properties>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -134,6 +132,12 @@
             <artifactId>hibernate-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-bom</artifactId>
+            <version>8.1.2.Final</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
@@ -185,6 +189,10 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -282,7 +290,8 @@
         <profile>
             <id>prod</id>
             <properties>
-                <spring.datasource.url>jdbc:mysql://localhost:3306/skillbox_prod?allowPublicKeyRetrieval=true&amp;useSSL=false</spring.datasource.url>
+                <spring.datasource.url>jdbc:mysql://localhost:3306/skillbox_prod?allowPublicKeyRetrieval=true&amp;
+                    useSSL=false</spring.datasource.url>
                 <spring.datasource.username>${env.DB_USER}</spring.datasource.username>
                 <spring.datasource.password>${env.DB_PASS}</spring.datasource.password>
                 <spring.jpa.hibernate.ddl-auto>none</spring.jpa.hibernate.ddl-auto>
@@ -292,3 +301,4 @@
         </profile>
     </profiles>
 </project>
+
